[metadata]
name = pieceofcake
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
url = https://github.com/astrofrog/pieceofcake
license = BSD
license_file = LICENSE
description = A user-friendly wrapper to cookiecutter
long_description = file: README.rst
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
zip_safe = True
packages = find:
python_requires = >=3.6
install_requires =
    click
    cookiecutter

[options.entry_points]
console_scripts =
    pieceofcake = pieceofcake.main:main
